# media-lib

./: LICENSE  README.md
client/: angular.json  package-lock.json  package.json  tsconfig.json  tslint.json
client/src/: main.ts  styles.scss  tsconfig.spec.json
client/src/modules/app/: app.module.ts  app.routes.ts
client/src/modules/app/components/: index.ts
client/src/modules/app/services/: blur.service.ts  index.ts
client/src/modules/audio/: audio.module.ts  audio.routes.ts
client/src/modules/audio/components/: index.ts
client/src/modules/audio/services/: index.ts
client/src/modules/graphic/: graphic.module.ts  graphic.routes.ts
client/src/modules/graphic/components/: index.ts
client/src/modules/graphic/services/: index.ts
client/src/modules/shared/: shared.modules.ts
client/src/modules/shared/services/: index.ts  wasm.service.ts
client/src/modules/ui/: ui.module.ts
client/src/modules/ui/directives/: outside-click.directive.ts
client/src/styles/ui-kit/: ui-kit.scss
client/src/styles/ui-kit/components/: _app-bar.scss  _button.scss  _card.scss  _fab.scss  _index.scss  _input.scss  _list.scss  _navigation.scss  _notification.scss  _spinner.scss  _toggle.scss
client/src/styles/ui-kit/global/: _colors.scss  _global.scss  _reset.scss
client/src/styles/ui-kit/mixins/: _media-queries.scss
client/src/wasm/: binary.js  fibonacci.js  module.js  module.wasm
cplusplus/: CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  cmake_install.cmake
cplusplus/build.emscripten/: binary.js  binary.wasm  module.js
cplusplus/src/: fibonacci.c
(+20 files in other folders)
